--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/mode/clike/clike.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/mode/swift/swift.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/clusterize.js/0.18.0/clusterize.min.js"></script>
-  <script>var LANGUAGE_BASE_URL = "";</script>
+  <script>var LANGUAGE_BASE_URL = "https://xuanhoa88.github.io/mgt-parser.github.io";</script>
   <script src="./tree-sitter.js"></script>
   <script src="./playground.js"></script>
 
