--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
   <title>tree-sitter org-mode</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.45.0/codemirror.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/clusterize.js/0.18.0/clusterize.min.css" />
-  <link rel="icon" type="image/png" href="https://tree-sitter.github.io/tree-sitter/assets/images/favicon-32x32.png"
-    sizes="32x32" />
-  <link rel="icon" type="image/png" href="https://tree-sitter.github.io/tree-sitter/assets/images/favicon-16x16.png"
-    sizes="16x16" />
 </head>
 
 <body>
@@ -61,7 +57,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/mode/swift/swift.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/clusterize.js/0.18.0/clusterize.min.js"></script>
   <script>var LANGUAGE_BASE_URL = "https://xuanhoa88.github.io/mgt-parser.github.io";</script>
-  <script src="./tree-sitter.js"></script>
+  <script src="https://xuanhoa88.github.io/mgt-parser.github.io/tree-sitter.js"></script>
   <script src="./playground.js"></script>
 
   <style>
@@ -178,14 +174,15 @@
       counter-reset: line;
     }
 
-    pre > div {
+    pre>div {
       counter-increment: line;
     }
 
-    pre > div::before {
+    pre>div::before {
       content: counter(line);
       display: inline-block;
-      width: 1.5em; /* Fixed width */
+      width: 1.5em;
+      /* Fixed width */
       border-right: 1px solid #ddd;
       padding: 0 .5em;
       margin-right: .5em;
