--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/mode/clike/clike.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/mode/swift/swift.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/clusterize.js/0.18.0/clusterize.min.js"></script>
-  <script>var LANGUAGE_BASE_URL = "https://xuanhoa88.github.io/mgt-parser.github.io";</script>
-  <script src="https://xuanhoa88.github.io/mgt-parser.github.io/tree-sitter.js"></script>
+  <script>var LANGUAGE_BASE_URL = "";</script>
+  <script src="./node_modules/web-tree-sitter/tree-sitter.js"></script>
   <script src="./playground.js"></script>
 
   <style>
