--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/mode/swift/swift.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/clusterize.js/0.18.0/clusterize.min.js"></script>
   <script>var LANGUAGE_BASE_URL = "";</script>
-  <script src="./node_modules/web-tree-sitter/tree-sitter.js"></script>
+  <script src="./tree-sitter.js"></script>
   <script src="./playground.js"></script>
 
   <style>
