--- a/index.html
+++ b/index.html
@@ -152,6 +152,8 @@
           <option value="java">Java</option>
           <option value="kotlin">Kotlin</option>
           <option value="swift">Swift</option>
+          <option value="c">C</option>
+          <option value="cpp">C++</option>
         </select>
       </div>
 
