--- a/index.html
+++ b/index.html
@@ -153,6 +153,8 @@
           <option value="csharp" selected="selected">C#</option>
           <option value="java">Java</option>
           <option value="kotlin">Kotlin</option>
+          <option value="pascal">Pascal (Delphi, Freepascal)</option>
+          <option value="python">Python</option>
           <option value="swift">Swift</option>
         </select>
       </div>
