--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
           <option value="kotlin">Kotlin</option>
           <option value="pascal">Pascal (Delphi, Freepascal)</option>
           <option value="python">Python</option>
+          <option value="javascript">JavaScript</option>
           <option value="swift">Swift</option>
         </select>
       </div>
