--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
           <option value="pascal">Pascal (Delphi, Freepascal)</option>
           <option value="python">Python</option>
           <option value="javascript">JavaScript</option>
+          <option value="typescript">TypeScript</option>
           <option value="swift">Swift</option>
         </select>
       </div>
