--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/clusterize.js/0.18.0/clusterize.min.css" />
   <link rel="icon" type="image/png" href="./favicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="./favicon-16x16.png" sizes="16x16" />
-
-
   <style type="text/css">
     body {
       margin: 0;
@@ -158,6 +156,7 @@
           <option value="javascript">JavaScript</option>
           <option value="typescript">TypeScript</option>
           <option value="swift">Swift</option>
+          <option value="php">PHP</option>
         </select>
       </div>
 
