--- a/index.html
+++ b/index.html
@@ -157,6 +157,8 @@
           <option value="typescript">TypeScript</option>
           <option value="swift">Swift</option>
           <option value="php">PHP</option>
+          <option value="angular">Angular</option>
+          <option value="vue">VueJS</option>
         </select>
       </div>
 
