--- a/index.html
+++ b/index.html
@@ -157,8 +157,11 @@
           <option value="typescript">TypeScript</option>
           <option value="swift">Swift</option>
           <option value="php">PHP</option>
+          <option value="html">HTML</option>
           <option value="angular">Angular</option>
           <option value="vue">VueJS</option>
+          <option value="dtd">DTD</option>
+          <option value="xml">XML</option>
         </select>
       </div>
 
